--- a/trade.ipynb
+++ b/trade.ipynb
@@ -17,7 +17,7 @@
     "pd.set_option('display.max_colwidth', None,\"display.max_columns\", None)\n",
     "pd.set_option('float_format', '{:.3f}'.format)\n",
     "\n",
-    "ch = ClickHouse(host='92.255.79.45', port='8123',user='db_user', password='0987654321', db='db')"
+    "ch = ClickHouse()"
    ]
   },
   {
