--- a/trade.ipynb
+++ b/trade.ipynb
@@ -154,6 +154,7 @@
     "                    trade_low_limit = trade_low_limit/100\n",
     "                    trade_high_limit = trade_high_limit/100\n",
     "                    ch_offset = 0\n",
+    "                    is_it_time_to_stop = pd.to_datetime(df_from_query(f'''SELECT min(event_time) FROM binance.binancews_trade bt''').values[0], unit='ms'),
     "\n",
     "                    while is_it_time_to_stop < time_to_stop:\n",
     "                        print(f'OFFSET: {ch_offset} STARTS!')\n",
